--- a/src/App.css
+++ b/src/App.css
@@ -239,76 +239,111 @@ h2 {
 /* Skills Section Style */
 .skills {
   display: flex;
-  padding: 149.33px 85.33px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 106.667px;
+  padding: 60px 30px; 
+  flex-direction: column; 
+  justify-content: flex-start;
+  align-items: stretch; 
+  z-index: -10;
+  gap: 40px; 
 }
-.skill {
-  color: var(--heading-color);
-  font-size: 64px;
-  font-weight: 700;
-  line-height: 77px;
+
+/* Skills Header Style */
+.skillsHeader {
+  text-align: center; 
+  margin-bottom: 20px; 
 }
-.skills1 {
-  display: grid;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 42.6px;
-  grid-template-columns: repeat(4, 1fr);
-}
-.skillsCard {
+
+/* Skills Container */
+.skillsContainer {
+  margin-left: 50px;
+  margin-right: 50px;
   display: flex;
-  padding: 32px;
+  flex-direction: row; 
+  gap: 70px; 
+  flex-wrap: wrap; 
+}
+
+.skills1 {
+  flex: 1; 
+  display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 32px;
-  flex: 1 0 0;
-  border-radius: 10.6px;
+  align-items: center; 
+  justify-content: flex-start;
+  gap: 20px; 
+  min-width: 250px;
+  box-sizing: border-box; 
+}
+
+.skillsCard {
+  width: 100%; 
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px; 
+  flex: 1 0 auto;
+  border-radius: 10px;
   background: var(--bg-shade);
-  min-height: 250px;
+  min-height: 300px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  transition: all 0.3s ease; 
 }
+
 .skillsCard:hover {
+  transform: translateY(-10px); 
   border-bottom: 4px solid var(--primary);
+  
 }
+
 .skillsCard:hover .skillsDesc {
   color: var(--darkblue);
 }
+
 .skillsImg {
+  width: 80px;
+  height: 80px;
   display: flex;
-  padding: 13.3px;
   justify-content: center;
   align-items: center;
-  gap: 13.3px;
-  border-radius: 10.6px;
+  gap: 10px; 
+  border-radius: 10px;
   background: #fff;
-  box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.skillsImg img {
+  height: 80px; 
+  max-width: 100px; 
+  max-height: 80px; 
+}
+
 .skillsContent {
-  display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 32px;
-  align-self: stretch;
+  align-items: center; 
+  gap: 16px; 
 }
+
+.skillsContent img{
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+}
+
 .skillsTitle {
   color: var(--heading-color);
-  font-size: 32px;
+  font-size: 24px;
   font-weight: 700;
-  line-height: 45px;
+  line-height: 30px;
+  text-align: center; 
+  margin-bottom: 10px; 
 }
-.skillsDesc {
-  color: var(--black);
-  font-size: 21.3px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 32px;
-}
+
 /* Skills Style Ends */
 
+
+
 /* About Us */
-.about {
+.about1 {
   display: grid;
   padding: 133.3px 85.3px;
   align-items: center;
@@ -319,6 +354,101 @@ h2 {
   width: 100%;
   height: 100%;
 }
+
+.timeline {
+  max-width: 1000px;
+  margin: 0 auto;
+  z-index: -10;
+}
+
+.timeline h2 {
+  text-align: left;
+  color: #b7ff00;
+}
+
+.timeline-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start; 
+  position: relative;
+  z-index: -10;
+  gap: 120px; 
+}
+
+.timeline-item {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  text-align: center;
+  position: relative;
+}
+
+.timeline-icon {
+  width: 40px;
+  height: 40px;
+  background-color: #b7ff00;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px; 
+  z-index: 1;
+}
+
+.timeline-content {
+  background-color: #1c1c1c;
+  border-radius: 10px;
+  padding: 10px;
+  width: 200px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.timeline-content h3 {
+  margin: 0;
+  font-size: 16px;
+  color: #b7ff00;
+}
+
+.timeline-content p {
+  margin: 5px 0 10px;
+  color: #b7ff00;
+}
+
+.timeline-content span {
+  font-size: 14px;
+  color: #b7ff00;
+}
+
+/* Line connecting the icons */
+.timeline-container:before {
+  content: '';
+  position: absolute;
+  top: 20px; 
+  left: 20px; 
+  right: 200px; 
+  height: 2px;
+  background-color: #b7ff00;
+  z-index: 0;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 1068px) {
+  .timeline-container {
+      flex-direction: column; 
+      align-items: center; 
+      gap: 50px; 
+  }
+  .timeline-container:before {
+      top: 0; 
+      left: 0;
+      right: 0;
+      height: 0;
+  }
+  .timeline-item {
+      align-items: center;
+  }
+}
+
 /* About Us Ends */
 
 /* My Portfolio Starts */
@@ -329,17 +459,15 @@ h2 {
   align-items: flex-start;
   gap: 80px;
 }
-.portfolio--container-box {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
+
 .portfolio--container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 21.3px;
+  padding: 0px;
+  transform: translate(0,20px);
+  z-index: -1;
 }
 .portfolio2 {
   display: flex;
@@ -366,6 +494,12 @@ h2 {
   cursor: pointer;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
+}
+.portfolioCard a {
+  text-decoration: none; /* Removes underline from links */
+  color: inherit; /* Inherits color from the parent, useful if you have specific colors applied */
+  display: block; /* Makes the entire card clickable */
+  transition: color 0.2s ease; /* Adds a smooth color transition on hover */
 }
 .portfolioContent {
   display: flex;
@@ -434,79 +568,44 @@ h2 {
   line-height: 150%;
 }
 /* Testimonial Ends */
-.contact--section {
-  display: flex;
-  padding: 150px 85px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  gap: 64px;
-}
-.contact--form--container {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: repeat(5, auto);
-  width: 40%;
-  row-gap: 32px;
-}
-.container {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  column-gap: 32px;
-  row-gap: 32px;
-}
-.contact--label {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 10.6px;
-  flex: 1 0 0;
-  width: 100%;
-}
-.contact--input {
-  display: flex;
-  font-family: "Roboto";
-  padding: 16px;
-  align-items: center;
-  align-self: stretch;
-  border-radius: 8px;
-  border: 1.333px solid var(--primary);
-  background: var(--white);
-}
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  /* Some browsers will not display the caret when using calc, so we put the fallback first */
-  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="33" viewBox="0 0 32 33" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.5303 21.2052C16.2374 21.4981 15.7626 21.4981 15.4697 21.2052L7.82318 13.5587C7.53029 13.2658 7.53029 12.791 7.82318 12.4981L8.17674 12.1445C8.46963 11.8516 8.9445 11.8516 9.2374 12.1445L16 18.9071L22.7626 12.1445C23.0555 11.8516 23.5303 11.8516 23.8232 12.1445L24.1768 12.4981C24.4697 12.791 24.4697 13.2658 24.1768 13.5587L16.5303 21.2052Z" fill="%23033333"/></svg>')
-    white no-repeat 98.5% !important; /* !important used for overriding all other customisations */
-  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="33" viewBox="0 0 32 33" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.5303 21.2052C16.2374 21.4981 15.7626 21.4981 15.4697 21.2052L7.82318 13.5587C7.53029 13.2658 7.53029 12.791 7.82318 12.4981L8.17674 12.1445C8.46963 11.8516 8.9445 11.8516 9.2374 12.1445L16 18.9071L22.7626 12.1445C23.0555 11.8516 23.5303 11.8516 23.8232 12.1445L24.1768 12.4981C24.4697 12.791 24.4697 13.2658 24.1768 13.5587L16.5303 21.2052Z" fill="%23033333"/></svg>')
-    white no-repeat calc(100% - 20px); /* Better placement regardless of input width */
-}
-/*For IE*/
-select::-ms-expand {
-  display: none;
-}
-.checkbox--label {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 10.6px;
-  flex: 1 0 0;
-  justify-content: flex-start;
-}
-input[type="checkbox"] {
-  width: 21px;
-  height: 21px;
-  border: 0.15em solid var(--heading-color);
-  border-radius: 0.15em;
-  transform: translatey(-0.075em);
-}
-/* Contact End */
-
-/* Footer Start */
 /* Footer Starts */
+.contact {
+  max-width: 600px;
+  margin: 0;
+  text-align: center;
+  padding: 0px;
+}
+
+.sub--title {
+  font-size: 16px;
+}
+
+.contact h2 {
+  font-size: 24px;
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.contact-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+}
+
+.contact-item svg {
+  margin-right: 15px; /* Space between the icon and text */
+}
+
+.text-lg {
+  font-size: 16px;
+}
+
+
 .footer--container {
   display: flex;
   padding: 106.667px 85.333px;
@@ -515,6 +614,7 @@ input[type="checkbox"] {
   background: var(--bg-shade);
   align-items: center;
   align-self: stretch;
+  padding-bottom: 10px;
 }
 .footer--link--container {
   display: flex;
@@ -542,20 +642,19 @@ input[type="checkbox"] {
   text-decoration: none;
 }
 .divider {
-  margin: 106px 0 42.67px;
+  margin: 40px 0 40px;
   height: 1.333px;
   width: 100%;
   background: rgba(40, 41, 56, 0.55);
 }
 .footer--content--container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  align-self: stretch;
 }
 .footer--content {
   color: var(--black);
-  font-size: 18.667px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 28px;
 }
